Add MySQL init scripts and complete deployment configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - "${DB_PORT:-3306}:3306"
     volumes:
       - db-data:/var/lib/mysql
+      - ./mysql-init:/docker-entrypoint-initdb.d #usersys already exists
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DEPLOY_DB_PASSWORD}"]
       interval: 10s
